logs/dag_id=ETL_Flow/run_id=manual__2024-03-15T141630.031978+0000/task_id=dim_mrr2stg/attempt=3.log
[2024-03-15T14:28:01.251+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: ETL_Flow.dim_mrr2stg manual__2024-03-15T14:16:30.031978+00:00 [queued]>
[2024-03-15T14:28:01.300+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: ETL_Flow.dim_mrr2stg manual__2024-03-15T14:16:30.031978+00:00 [queued]>
[2024-03-15T14:28:01.304+0000] {taskinstance.py:2193} INFO - Starting attempt 3 of 6
[2024-03-15T14:28:01.366+0000] {taskinstance.py:2214} INFO - Executing <Task(PostgresOperator): dim_mrr2stg> on 2024-03-15 14:16:30.031978+00:00
[2024-03-15T14:28:01.393+0000] {standard_task_runner.py:60} INFO - Started process 1227 to run task
[2024-03-15T14:28:01.403+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'ETL_Flow', 'dim_mrr2stg', 'manual__2024-03-15T14:16:30.031978+00:00', '--job-id', '1380', '--raw', '--subdir', 'DAGS_FOLDER/etl2.py', '--cfg-path', '/tmp/tmp4d_wn91a']
[2024-03-15T14:28:01.420+0000] {standard_task_runner.py:88} INFO - Job 1380: Subtask dim_mrr2stg
[2024-03-15T14:28:01.606+0000] {task_command.py:423} INFO - Running <TaskInstance: ETL_Flow.dim_mrr2stg manual__2024-03-15T14:16:30.031978+00:00 [running]> on host 3262c7a95ffd
[2024-03-15T14:28:04.960+0000] {taskinstance.py:2510} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='coder2j' AIRFLOW_CTX_DAG_ID='ETL_Flow' AIRFLOW_CTX_TASK_ID='dim_mrr2stg' AIRFLOW_CTX_EXECUTION_DATE='2024-03-15T14:16:30.031978+00:00' AIRFLOW_CTX_TRY_NUMBER='3' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-03-15T14:16:30.031978+00:00'
[2024-03-15T14:28:04.968+0000] {sql.py:276} INFO - Executing: insert into STG_Dim_Products(Product_ID,Product_Name,Supplier,Category,Unit_Price,Unit_Cost)
select 
case when Product_ID ~ '^[0-9]+$' then cast(Product_ID as int) else 0 end,
Product_Name,
case when Supplier ~ '^[0-9]+$' then cast(Supplier as int) else 0 end,
case when Category ~ '^[0-9]+$' then cast(Category as int) else 0 end,
case when Unit_Price similar to '[0-9]+(\.[0-9]+)?' and cast(Unit_Price as decimal(15,5))>=0
    then cast(Unit_Price as decimal(15,5)) else null end,
case when Unit_Cost similar to '[0-9]+(\.[0-9]+)?' and cast(Unit_Cost as decimal(15,5))>=0
    then cast(Unit_Cost as decimal(15,5)) else null end
from MRR_Dim_Products;

insert into STG_Dim_Customers(Customer_ID,Company_Name,Contact_Name,Street,City,Postal_Code,Country,Phone,Fax)
select
case when Customer_ID ~ '^[0-9]+$' then cast(Customer_ID as int) else 0 end,
Company_Name,
Contact_Name,
Street,
City,
Postal_Code,
Country,
Phone,
Fax
from MRR_Dim_Customers;

insert into STG_Dim_Employees(Employee_ID,Last_Name,First_Name,Title,Hire_Date,Office,Reports_To,Month_Salary)
select 
case when Employee_ID ~ '^[0-9]+$' then cast(Employee_ID as int) else 0 end,
Last_Name,
First_Name,
Title,
case when
       Hire_Date  ~ '^\d{4}-\d{2}-\d{2}$' then to_date(Hire_Date,'YYYY-MM-DD' ) when
       Hire_Date  ~ '^\d{2}-\d{2}-\d{4}$' then to_date(Hire_Date,'DD-MM-YYYY' ) when
       Hire_Date  ~ '^\d{4}.\d{2}.\d{2}$' then to_date(Hire_Date,'YYYY.MM.DD' ) when
       Hire_Date  ~ '^\d{2}.\d{2}.\d{4}$' then to_date(Hire_Date,'DD.MM.YYYY' ) when
       Hire_Date  ~ '^\d{2}/\d{2}/\d{4}$' then to_date(Hire_Date,'DD/MM/YYYY' ) when
       Hire_Date  ~ '^\d{4}/\d{2}/\d{2}$' then to_date(Hire_Date,'YYYY/MM/DD' ) when
       Hire_Date  ~ '^\d{2}\\d{2}\\d{4}$' then to_date(Hire_Date,'DD\MM\YYYY' ) when
       Hire_Date  ~ '^\d{4}\\d{2}\\d{2}$' then to_date(Hire_Date,'YYYY\MM\DD' ) else null end,
case when Office ~ '^[0-9]+$' then cast(Office as int) else 0 end,
case when Reports_To ~ '^[0-9]+$' then cast(Reports_To as int) else 0 end,
case when Month_Salary is null then null else cast(Month_Salary as decimal(15,5)) end
from MRR_Dim_Employees;

insert into DWH_Dim_Dates(Date,Year,Quarter,Month,Day)
select
generate_series::date,
extract(year from generate_series),
extract(quarter from generate_series),
extract(month from generate_series),
extract(day from generate_series)
from generate_series('2018-01-01'::date, CURRENT_DATE::date, '1 day');


insert into STG_Dim_Time(DateTime, Date, Hour)
select
generate_series::timestamp,
date_trunc('hour', generate_series::timestamp),
time(extract(hour from generate_series::timestamp))
from generate_series('2018-01-01'::timestamp, CURRENT_DATE::timestamp, '1 hour');
[2024-03-15T14:28:05.019+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-03-15T14:28:05.081+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-03-15T14:28:05.347+0000] {sql.py:457} INFO - Running statement: insert into STG_Dim_Products(Product_ID,Product_Name,Supplier,Category,Unit_Price,Unit_Cost)
select 
case when Product_ID ~ '^[0-9]+$' then cast(Product_ID as int) else 0 end,
Product_Name,
case when Supplier ~ '^[0-9]+$' then cast(Supplier as int) else 0 end,
case when Category ~ '^[0-9]+$' then cast(Category as int) else 0 end,
case when Unit_Price similar to '[0-9]+(\.[0-9]+)?' and cast(Unit_Price as decimal(15,5))>=0
    then cast(Unit_Price as decimal(15,5)) else null end,
case when Unit_Cost similar to '[0-9]+(\.[0-9]+)?' and cast(Unit_Cost as decimal(15,5))>=0
    then cast(Unit_Cost as decimal(15,5)) else null end
from MRR_Dim_Products;

insert into STG_Dim_Customers(Customer_ID,Company_Name,Contact_Name,Street,City,Postal_Code,Country,Phone,Fax)
select
case when Customer_ID ~ '^[0-9]+$' then cast(Customer_ID as int) else 0 end,
Company_Name,
Contact_Name,
Street,
City,
Postal_Code,
Country,
Phone,
Fax
from MRR_Dim_Customers;

insert into STG_Dim_Employees(Employee_ID,Last_Name,First_Name,Title,Hire_Date,Office,Reports_To,Month_Salary)
select 
case when Employee_ID ~ '^[0-9]+$' then cast(Employee_ID as int) else 0 end,
Last_Name,
First_Name,
Title,
case when
       Hire_Date  ~ '^\d{4}-\d{2}-\d{2}$' then to_date(Hire_Date,'YYYY-MM-DD' ) when
       Hire_Date  ~ '^\d{2}-\d{2}-\d{4}$' then to_date(Hire_Date,'DD-MM-YYYY' ) when
       Hire_Date  ~ '^\d{4}.\d{2}.\d{2}$' then to_date(Hire_Date,'YYYY.MM.DD' ) when
       Hire_Date  ~ '^\d{2}.\d{2}.\d{4}$' then to_date(Hire_Date,'DD.MM.YYYY' ) when
       Hire_Date  ~ '^\d{2}/\d{2}/\d{4}$' then to_date(Hire_Date,'DD/MM/YYYY' ) when
       Hire_Date  ~ '^\d{4}/\d{2}/\d{2}$' then to_date(Hire_Date,'YYYY/MM/DD' ) when
       Hire_Date  ~ '^\d{2}\\d{2}\\d{4}$' then to_date(Hire_Date,'DD\MM\YYYY' ) when
       Hire_Date  ~ '^\d{4}\\d{2}\\d{2}$' then to_date(Hire_Date,'YYYY\MM\DD' ) else null end,
case when Office ~ '^[0-9]+$' then cast(Office as int) else 0 end,
case when Reports_To ~ '^[0-9]+$' then cast(Reports_To as int) else 0 end,
case when Month_Salary is null then null else cast(Month_Salary as decimal(15,5)) end
from MRR_Dim_Employees;

insert into DWH_Dim_Dates(Date,Year,Quarter,Month,Day)
select
generate_series::date,
extract(year from generate_series),
extract(quarter from generate_series),
extract(month from generate_series),
extract(day from generate_series)
from generate_series('2018-01-01'::date, CURRENT_DATE::date, '1 day');


insert into STG_Dim_Time(DateTime, Date, Hour)
select
generate_series::timestamp,
date_trunc('hour', generate_series::timestamp),
time(extract(hour from generate_series::timestamp))
from generate_series('2018-01-01'::timestamp, CURRENT_DATE::timestamp, '1 hour');, parameters: None
[2024-03-15T14:28:05.366+0000] {taskinstance.py:2728} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 404, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 462, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "extract"
LINE 60: time(extract(hour from generate_series::timestamp))
              ^

[2024-03-15T14:28:05.508+0000] {taskinstance.py:1149} INFO - Marking task as UP_FOR_RETRY. dag_id=ETL_Flow, task_id=dim_mrr2stg, execution_date=20240315T141630, start_date=20240315T142801, end_date=20240315T142805
[2024-03-15T14:28:05.660+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 1380 for task dim_mrr2stg (syntax error at or near "extract"
LINE 60: time(extract(hour from generate_series::timestamp))
              ^
; 1227)
[2024-03-15T14:28:05.868+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-03-15T14:28:06.015+0000] {taskinstance.py:3309} INFO - 0 downstream tasks scheduled from follow-on schedule check
